describe how to read figs

--- a/_posts/2020-04-28-vt-covid.md
+++ b/_posts/2020-04-28-vt-covid.md
@@ -8,11 +8,12 @@ author_profile: true
 ---
 Last Updated: 4/28/2020
 
-This is a quick look at how COVID-19 is impacting the state of Vermont. All data is from [Johns Hopkins University](https://github.com/CSSEGISandData/COVID-19) and is processed by [datasets/covid-19](https://github.com/datasets/covid-19). None of the data is my work (but is freely available through the linked sources). My contribution is the Vermont specific figures from this data. The figures are interactive so scrolling over them will provide additional information. The notebook used to generate these plots can be found [here](../../assets/ipynb/VT-analysis.ipynb).
+This is a quick look at how COVID-19 is impacting the state of Vermont. All data is from [Johns Hopkins University](https://github.com/CSSEGISandData/COVID-19) and is processed by [datasets/covid-19](https://github.com/datasets/covid-19). None of the data is my work (but is freely available through the linked sources). My contribution is the Vermont specific figures from this data. The figures are interactive so scrolling your mouse over or clicking on mobile will provide additional information. The notebook used to generate these plots can be found [here](../../assets/ipynb/VT-analysis.ipynb).
 
-NOTE: The author is only displaying available data and is not making any judgments or predictions for COVID-19 cases in the state of Vermont. Please refer to the [CDC](https://www.cdc.gov/coronavirus/2019-ncov/index.html) if you are experiencing symptoms.
+NOTE: The author is only displaying available data and is not making any conclusions or predictions for COVID-19 cases in the state of Vermont. Please refer to the [CDC](https://www.cdc.gov/coronavirus/2019-ncov/index.html) if you are experiencing symptoms.
 
 ## VT Overall Data
+New cases/deaths are depicted in blue while the overall total cases/death are depicted in the red trendline.
 <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="/assets/images/VT-cases-chart.html" height="425" width="100%"></iframe>
 <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="/assets/images/VT-deaths-chart.html" height="425" width="100%"></iframe>
 <sup>On April 14th there was a decrease in cases. This may be due to a reporting error.</sup>
