Update and fix notebook

--- a/_posts/2020-04-28-vt-covid.md
+++ b/_posts/2020-04-28-vt-covid.md
@@ -6,7 +6,7 @@ date:   2020-04-28
 categories: projects
 author_profile: true
 ---
-Last Updated: 4/28/2020
+Last Updated: 4/29/2020
 
 This is a quick look at how COVID-19 is impacting the state of Vermont. All data is from [Johns Hopkins University](https://github.com/CSSEGISandData/COVID-19) and is processed by [datasets/covid-19](https://github.com/datasets/covid-19). None of the data is my work (but is freely available through the linked sources). My contribution is the Vermont specific figures from this data. The figures are interactive so scrolling your mouse over or clicking on mobile will provide additional information. The notebook used to generate these plots can be found [here](../../assets/ipynb/VT-analysis.ipynb).
 
@@ -19,10 +19,8 @@ New cases/deaths are depicted in blue while the overall total cases/death are de
 <sup>On April 14th there was a decrease in cases. This may be due to a reporting error.</sup>
 
 ## VT COVID-19 by County
-### Cases
 <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="/assets/images/VT-cases-map.html" height="525" width="100%"></iframe>
-
-### Deaths
 <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="/assets/images/VT-deaths-map.html" height="525" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="/assets/images/VT-deathspcase-map.html" height="525" width="100%"></iframe>
 
 If there are any issues or you have questions, feel free to contact me at <dfolmsbee@gmail.com>.
