Update plots and add link to google colab

--- a/_posts/2020-04-28-vt-covid.md
+++ b/_posts/2020-04-28-vt-covid.md
@@ -6,9 +6,9 @@ date:   2020-04-28
 categories: projects
 author_profile: true
 ---
-Last Updated: 4/29/2020
+Last Updated: 5/02/2020
 
-This is a quick look at how COVID-19 is impacting the state of Vermont. All data is from [Johns Hopkins University](https://github.com/CSSEGISandData/COVID-19) and is processed by [datasets/covid-19](https://github.com/datasets/covid-19). None of the data is my work (but is freely available through the linked sources). My contribution is the Vermont specific figures from this data. The figures are interactive so scrolling your mouse over or clicking on mobile will provide additional information. The notebook used to generate these plots can be found [here](../../assets/ipynb/VT-analysis.ipynb).
+This is a quick look at how COVID-19 is impacting the state of Vermont. All data is from [Johns Hopkins University](https://github.com/CSSEGISandData/COVID-19) and is processed by [datasets/covid-19](https://github.com/datasets/covid-19). None of the data is my work (but is freely available through the linked sources). My contribution is the Vermont specific figures from this data. The figures are interactive so scrolling your mouse over or clicking on mobile will provide additional information. This notebook is currently on [Google Colab](https://colab.research.google.com/drive/1gpS3902pl6y7pnjnZBNkDbXfzSXbrr6X) if you would like to edit and try additional states on your own.
 
 NOTE: The author is only displaying available data and is not making any conclusions or predictions for COVID-19 cases in the state of Vermont. Please refer to the [CDC](https://www.cdc.gov/coronavirus/2019-ncov/index.html) if you are experiencing symptoms.
 
