--- a/_posts/2020-04-28-vt-covid.md
+++ b/_posts/2020-04-28-vt-covid.md
@@ -6,7 +6,7 @@ date:   2020-04-28
 categories: projects
 author_profile: true
 ---
-Last Updated: 05/02/2020
+Last Updated: 05/11/2020
 
 This is a quick look at how COVID-19 is impacting the state of Vermont. All data is from [Johns Hopkins University](https://github.com/CSSEGISandData/COVID-19) and is processed by [datasets/covid-19](https://github.com/datasets/covid-19). None of the data is my work (but is freely available through the linked sources). My contribution is the Vermont specific figures from this data. The figures are interactive so scrolling your mouse over or clicking on mobile will provide additional information. This notebook is currently on [Google Colab](https://colab.research.google.com/drive/1gpS3902pl6y7pnjnZBNkDbXfzSXbrr6X) if you would like to edit and try additional states on your own.
 
@@ -20,7 +20,9 @@ New cases/deaths are depicted in blue while the overall total cases/death are de
 
 ## VT COVID-19 by County
 <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="/assets/images/VT-cases-map.html" height="525" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="/assets/images/VT-cases-100k-map.html" height="525" width="100%"></iframe>
 <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="/assets/images/VT-deaths-map.html" height="525" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="/assets/images/VT-deaths-100k-map.html" height="525" width="100%"></iframe>
 <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="/assets/images/VT-deathspcase-map.html" height="525" width="100%"></iframe>
 
 If there are any issues or you have questions, feel free to contact me at <dfolmsbee@gmail.com>.
