Update preprint and new poster

--- a/_posts/2020-04-28-vt-covid.md
+++ b/_posts/2020-04-28-vt-covid.md
@@ -5,6 +5,8 @@ excerpt: "Data analysis of how Vermont is being affected the COVID-19 pandemic"
 date:   2020-04-28
 categories: projects
 author_profile: true
+header:
+    teaser: /assets/images/VT-cases-100k-map.png
 ---
 Last Updated: 05/11/2020
 
